quaternion simple definition.

--- a/gml/gml.vcxproj.filters
+++ b/gml/gml.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="include\gmlutility.h">
       <Filter>include</Filter>
     </ClInclude>
+    <ClInclude Include="include\gmlquaternion.h">
+      <Filter>include</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="source\vector2.cpp">
@@ -78,6 +81,9 @@
       <Filter>source</Filter>
     </ClCompile>
     <ClCompile Include="source\rect.cpp">
+      <Filter>source</Filter>
+    </ClCompile>
+    <ClCompile Include="source\quaternion.cpp">
       <Filter>source</Filter>
     </ClCompile>
   </ItemGroup>
