--- a/gml/gml.vcxproj
+++ b/gml/gml.vcxproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ClInclude Include="include\gmlaabb.h" />
     <ClInclude Include="include\gmlcolor.h" />
+    <ClInclude Include="include\gmlquaternion.h" />
     <ClInclude Include="include\gmlutility.h" />
     <ClInclude Include="include\gmlmatrix.h" />
     <ClInclude Include="include\gmlray.h" />
@@ -37,6 +38,7 @@
     <ClCompile Include="source\matrix22.cpp" />
     <ClCompile Include="source\matrix33.cpp" />
     <ClCompile Include="source\matrix44.cpp" />
+    <ClCompile Include="source\quaternion.cpp" />
     <ClCompile Include="source\ray.cpp" />
     <ClCompile Include="source\rect.cpp" />
     <ClCompile Include="source\vector2.cpp" />
