--- a/gml/gml.vcxproj
+++ b/gml/gml.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\gmlconv.h" />
     <ClInclude Include="include\gmlaabb.h" />
     <ClInclude Include="include\gmlcolor.h" />
     <ClInclude Include="include\gmlquaternion.h" />
@@ -33,6 +34,7 @@
     <ClCompile Include="source\aabb.cpp" />
     <ClCompile Include="source\color3.cpp" />
     <ClCompile Include="source\color4.cpp" />
+    <ClCompile Include="source\convertion.cpp" />
     <ClCompile Include="source\coord.cpp" />
     <ClCompile Include="source\math_util.cpp" />
     <ClCompile Include="source\matrix22.cpp" />
