--- a/gml/gml.vcxproj
+++ b/gml/gml.vcxproj
@@ -40,6 +40,7 @@
     <ClCompile Include="source\dual_quat.cpp" />
     <ClCompile Include="source\math_util.cpp" />
     <ClCompile Include="source\matrix22.cpp" />
+    <ClCompile Include="source\matrix32.cpp" />
     <ClCompile Include="source\matrix33.cpp" />
     <ClCompile Include="source\matrix44.cpp" />
     <ClCompile Include="source\quaternion.cpp" />
