--- a/gml/gml.vcxproj.filters
+++ b/gml/gml.vcxproj.filters
@@ -98,5 +98,8 @@
     <ClCompile Include="source\dual_quat.cpp">
       <Filter>source</Filter>
     </ClCompile>
+    <ClCompile Include="source\matrix32.cpp">
+      <Filter>source</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
