--- a/gml/gml.vcxproj
+++ b/gml/gml.vcxproj
@@ -33,6 +33,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="source\aabb.cpp" />
+    <ClCompile Include="source\aabb2d.cpp" />
     <ClCompile Include="source\color3.cpp" />
     <ClCompile Include="source\color4.cpp" />
     <ClCompile Include="source\convertion.cpp" />
