--- a/gml/gml.vcxproj
+++ b/gml/gml.vcxproj
@@ -40,7 +40,7 @@
     <ClCompile Include="source\coord.cpp" />
     <ClCompile Include="source\dual_quat.cpp" />
     <ClCompile Include="source\eular.cpp" />
-    <ClCompile Include="source\math_util.cpp" />
+    <ClCompile Include="source\utility.cpp" />
     <ClCompile Include="source\matrix22.cpp" />
     <ClCompile Include="source\matrix32.cpp" />
     <ClCompile Include="source\matrix33.cpp" />
