--- a/gml/gml.vcxproj.filters
+++ b/gml/gml.vcxproj.filters
@@ -56,9 +56,6 @@
     <ClCompile Include="source\vector3.cpp">
       <Filter>source</Filter>
     </ClCompile>
-    <ClCompile Include="source\math_util.cpp">
-      <Filter>source</Filter>
-    </ClCompile>
     <ClCompile Include="source\vector4.cpp">
       <Filter>source</Filter>
     </ClCompile>
@@ -105,6 +102,9 @@
       <Filter>source</Filter>
     </ClCompile>
     <ClCompile Include="source\aabb2d.cpp">
+      <Filter>source</Filter>
+    </ClCompile>
+    <ClCompile Include="source\utility.cpp">
       <Filter>source</Filter>
     </ClCompile>
   </ItemGroup>
