--- a/gml/gml.vcxproj.filters
+++ b/gml/gml.vcxproj.filters
@@ -110,5 +110,8 @@
     <ClCompile Include="source\utility.cpp">
       <Filter>source</Filter>
     </ClCompile>
+    <ClCompile Include="source\angle.cpp">
+      <Filter>source</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
