--- a/gml/gml.vcxproj
+++ b/gml/gml.vcxproj
@@ -20,7 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\gmlangle.h" />
-    <ClInclude Include="include\gmlconv.h" />
+    <ClInclude Include="include\gmlconversion.h" />
     <ClInclude Include="include\gmlaabb.h" />
     <ClInclude Include="include\gmlcolor.h" />
     <ClInclude Include="include\gmldualquat.h" />
@@ -36,7 +36,6 @@
     <ClCompile Include="source\aabb2d.cpp" />
     <ClCompile Include="source\color3.cpp" />
     <ClCompile Include="source\color4.cpp" />
-    <ClCompile Include="source\convertion.cpp" />
     <ClCompile Include="source\coord.cpp" />
     <ClCompile Include="source\dual_quat.cpp" />
     <ClCompile Include="source\matrix22.cpp" />
