adjust swizzle test class.

--- a/gml_test/gml_test.vcxproj.filters
+++ b/gml_test/gml_test.vcxproj.filters
@@ -102,7 +102,7 @@
       <Filter>源文件\vector</Filter>
     </ClCompile>
     <ClCompile Include="vector_swizzle.cpp">
-      <Filter>源文件\vector</Filter>
+      <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
